--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^21.1.1",
+    "@types/jest": "^23.3.1",
     "@types/node": "^8.0.31",
-    "@types/react": "^16.0.7",
-    "@types/react-dom": "^15.5.0",
-    "@types/react-redux": "^5.0.9",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "@types/react": "^16.4.13",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.6",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
-    "react-scripts-ts": "2.7.0"
+    "react-scripts-ts": "^2.17.0",
+    "typescript": "~3.0.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
