--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@types/react-redux": "^6.0.6",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.0"
   },
   "devDependencies": {
-    "react-scripts-ts": "^2.17.0",
-    "typescript": "~3.0.3"
+    "react-scripts-ts": "^4.0.8",
+    "typescript": "~3.2.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -26,5 +26,11 @@
   "engines": {
     "node": "8.11.4",
     "npm": "6.4.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
