--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^23.3.1",
-    "@types/node": "^8.0.31",
-    "@types/react": "^16.4.13",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-redux": "^6.0.6",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.0"
+    "@types/jest": "^23.3.14",
+    "@types/node": "^8.10.62",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^6.0.14",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "react-scripts-ts": "^4.0.8",
-    "typescript": "~3.2.2"
+    "typescript": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts-ts start",
