--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^6.0.1",
+    "react-scripts": "^3.4.2",
     "redux": "^4.0.5",
-    "react-scripts-ts": "^4.0.8",
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "engines": {
     "node": "8.11.4",
