--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^17.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
+    "@types/dompurify": "^2.3.2",
+    "@types/jest": "^27.0.3",
+    "dompurify": "^2.3.4",
+    "html-react-parser": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
     "react-scripts": "^5.0.0",
-    "redux": "^4.1.2",
     "typescript": "^4.5.4"
   },
   "scripts": {
